# mkdir.py

./: README.md  setup.cfg
tests/mkdir/examples/: test.py
